# Refactorcode

./: README.MD  pyproject.toml
.github/workflows/: python-app.yml
refactor/: .coverage  pyproject.toml
refactor/refactor/: src.py
refactor/tests/: test_code.py
