[tool.poetry]
name = "refactor"
version = "0.1.0"
description = ""
authors = ["xiangliu1123 <117769320+xiangliu1123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
